Fix margin layout issue

--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -8,6 +8,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.text-muted{
+  margin-bottom: 0.3rem!important;
+}
+
 .title {
   margin-bottom: 5vh;
 }
@@ -76,7 +80,7 @@ body {
   font-size: 1rem;
   line-height: 1rem;
   border-radius: 10px;
-  margin-bottom: 0.6rem;
+  /* margin-bottom: 0.6rem; */
 }
 
 .title b {
